--- a/program/app/src/main/res/layout/activity_main.xml
+++ b/program/app/src/main/res/layout/activity_main.xml
@@ -23,6 +23,20 @@
             android:layout_weight="1"
             android:text="Button 1" />
 
+        <Button
+            android:id="@+id/btn_menu2"
+            android:layout_width="wrap_content"
+            android:layout_height="75dp"
+            android:layout_weight="1"
+            android:text="Button 2" />
+
+        <Button
+            android:id="@+id/btn_menu3"
+            android:layout_width="wrap_content"
+            android:layout_height="75dp"
+            android:layout_weight="1"
+            android:text="Button 3" />
+
     </LinearLayout>
 
     <FrameLayout
