--- a/program/app/src/main/res/layout/activity_main.xml
+++ b/program/app/src/main/res/layout/activity_main.xml
@@ -37,6 +37,12 @@
             android:layout_weight="1"
             android:text="Button 3" />
 
+        <Button
+            android:id="@+id/btn_menu4"
+            android:layout_width="wrap_content"
+            android:layout_height="75dp"
+            android:layout_weight="1"
+            android:text="Button 4" />
     </LinearLayout>
 
     <FrameLayout
