--- a/program/app/src/main/res/values/themes.xml
+++ b/program/app/src/main/res/values/themes.xml
@@ -2,7 +2,9 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.Tipala" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="colorPrimary">#009b4c</item>
+        <item name="colorPrimaryDark">#009b4c</item>
+        <item name="colorAccent">#009b4c</item>
     </style>
 
     <style name="Theme.Tipala" parent="Base.Theme.Tipala" />
