menambahkan foto pantai kedalam folder drawable untuk dijadikan banner pada home

--- a/program/app/src/main/res/layout/activity_main.xml
+++ b/program/app/src/main/res/layout/activity_main.xml
@@ -52,6 +52,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/lay_button">
-    </FrameLayout>
+        app:layout_constraintBottom_toTopOf="@id/lay_button"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
