--- a/program/app/src/main/res/drawable/box.xml
+++ b/program/app/src/main/res/drawable/box.xml
@@ -9,7 +9,7 @@
     <!-- White Top color -->
     <item android:bottom="3px">
         <shape android:shape="rectangle">
-            <solid android:color="#FFFFFF" />
+            <solid android:color="#F0F0F0" />
             <corners android:radius="7dp" />
         </shape>
     </item>
