--- a/program/app/src/main/res/layout/fragment_menu1.xml
+++ b/program/app/src/main/res/layout/fragment_menu1.xml
@@ -35,6 +35,71 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.334" />
 
+        <TextView
+            android:id="@+id/textView6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:text="Daftar Kategori"
+            android:textSize="20dp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.109"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+        <TextView
+            android:id="@+id/home1"
+            android:layout_width="165dp"
+            android:layout_height="100dp"
+            android:layout_marginStart="28dp"
+            android:layout_marginBottom="248dp"
+            android:background="@drawable/box"
+            android:gravity="center"
+            android:text="Menu 1"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView6"
+            app:layout_constraintVertical_bias="1.0" />
+
+        <TextView
+            android:id="@+id/home2"
+            android:layout_width="165dp"
+            android:layout_height="100dp"
+            android:background="@drawable/box"
+            android:gravity="center"
+            android:text="Menu 2"
+            app:layout_constraintBottom_toBottomOf="@+id/home1"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/home1"
+            app:layout_constraintTop_toTopOf="@+id/home1" />
+
+        <TextView
+            android:id="@+id/home3"
+            android:layout_width="165dp"
+            android:layout_height="100dp"
+            android:layout_marginStart="28dp"
+            android:layout_marginTop="28dp"
+            android:background="@drawable/box"
+            android:gravity="center"
+            android:text="Menu 3"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/home1"
+            app:layout_constraintVertical_bias="0.0" />
+
+        <TextView
+            android:id="@+id/home4"
+            android:layout_width="165dp"
+            android:layout_height="100dp"
+            android:background="@drawable/box"
+            android:gravity="center"
+            android:text="Menu 4"
+            app:layout_constraintBottom_toBottomOf="@+id/home3"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/home3"
+            app:layout_constraintTop_toTopOf="@+id/home3" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
