--- a/program/app/src/main/res/values/colors.xml
+++ b/program/app/src/main/res/values/colors.xml
@@ -7,4 +7,15 @@
     <color name="background_color_reverse">#161a29</color>
     <!--    <color name="facebook_button_color">#3B5999</color>-->
     <color name="loading_overlay_color">#1A525050</color>
+    <color name="greensand">#009b4c</color>
+
+    <color name="purple_200">#FFBB86FC</color>
+    <color name="purple_500">#FF6200EE</color>
+    <color name="purple_700">#FF3700EE</color>
+    <color name="teal_200">#FF03DAC5</color>
+    <color name="teal_700">#FF018786</color>
+    <color name="black">#FF000000</color>
+    <color name="white">#FFFFFFFF</color>
+    <color name="lavender">#8692f7</color>
+
 </resources>
