--- a/program/app/src/main/res/values/themes.xml
+++ b/program/app/src/main/res/values/themes.xml
@@ -7,5 +7,12 @@
         <item name="colorAccent">#009b4c</item>
     </style>
 
+    <style name="Base.Theme.MainActivity" parent="Theme.Material3.DayNight.NoActionBar">
+        <!-- Customize your light theme here. -->
+        <item name="colorPrimary">#009b4c</item>
+        <item name="colorPrimaryDark">#009b4c</item>
+        <item name="colorAccent">#009b4c</item>
+    </style>
+
     <style name="Theme.Tipala" parent="Base.Theme.Tipala" />
 </resources>
