--- a/program/app/src/main/res/values/themes.xml
+++ b/program/app/src/main/res/values/themes.xml
@@ -1,18 +1,31 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.Tipala" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
+    <style name="Base.Theme.Tipala" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <item name="colorPrimary">#009b4c</item>
-        <item name="colorPrimaryDark">#009b4c</item>
-        <item name="colorAccent">#009b4c</item>
+        <!-- Primary Color -->
+        <item name="colorPrimaryVariant">@color/greensand</item>
+        <item name="colorOnPrimary">@color/white</item>
+        <!-- Secondary Color -->
+        <item name="colorSecondary">@color/teal_200</item>
+        <item name="colorSecondaryVariant">@color/teal_700</item>
+        <item name="colorOnSecondary">@color/black</item>
+        <!-- Status bar color -->
+        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
     </style>
 
-    <style name="Base.Theme.MainActivity" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
+    <style name="Base.Theme.MainActivity" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="colorPrimary">#009b4c</item>
-        <item name="colorPrimaryDark">#009b4c</item>
-        <item name="colorAccent">#009b4c</item>
+        <!-- Primary Color -->
+        <item name="colorPrimaryVariant">@color/greensand</item>
+        <item name="colorOnPrimary">@color/white</item>
+        <!-- Secondary Color -->
+        <item name="colorSecondary">@color/teal_200</item>
+        <item name="colorSecondaryVariant">@color/teal_700</item>
+        <item name="colorOnSecondary">@color/black</item>
+        <!-- Status bar color -->
+        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
     </style>
+
 
     <style name="Theme.Tipala" parent="Base.Theme.Tipala" />
 </resources>
