--- a/program/app/src/main/res/layout/fragment_menu5.xml
+++ b/program/app/src/main/res/layout/fragment_menu5.xml
@@ -14,6 +14,36 @@
         android:layout_height="300dp"
         android:src="@drawable/sariringgung" />
 
-   
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:background="#093B51"
+        android:padding="20dp"
+        android:text="Pantai Sari Ringgung"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textColor="#FFFFFF"
+        android:textSize="30dp" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="   alan Way Rantai KM 14, Desa Sidodadi, Kecamatan Teluk Pandan, Kabupaten Pesawaran, Lampung."
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textSize="16dp" />
+
+    <ScrollView
+        android:layout_width="wrap_content"
+        android:layout_height="338dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="20dp"
+            android:text="@string/text6"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+            android:textSize="20dp" />
+
+    </ScrollView>
 
 </FrameLayout>
