--- a/program/app/src/main/res/layout/fragment_menu10.xml
+++ b/program/app/src/main/res/layout/fragment_menu10.xml
@@ -12,38 +12,8 @@
     <ImageView
         android:layout_width="415dp"
         android:layout_height="300dp"
-        android:src="@drawable/klara" />
+        android:src="@drawable/putih" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:background="#093B51"
-        android:padding="20dp"
-        android:text="Pantai Klara"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:textColor="#FFFFFF"
-        android:textSize="30dp" />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="Ketapang labupaten Pesawaran Lampung"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:textSize="16dp" />
-
-    <ScrollView
-        android:layout_width="wrap_content"
-        android:layout_height="338dp">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="20dp"
-            android:text="@string/text7"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-            android:textSize="20dp" />
-
-    </ScrollView>
+  
 
 </FrameLayout>
