--- a/program/app/src/main/res/layout/fragment_menu12.xml
+++ b/program/app/src/main/res/layout/fragment_menu12.xml
@@ -12,7 +12,7 @@
     <ImageView
         android:layout_width="415dp"
         android:layout_height="300dp"
-        android:src="@drawable/mutun" />
+        android:src="@drawable/pahawang" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -20,7 +20,7 @@
         android:layout_gravity="center"
         android:background="#093B51"
         android:padding="20dp"
-        android:text="Pantai Mutun"
+        android:text="Pulau Pahawang"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textColor="#FFFFFF"
         android:textSize="30dp" />
@@ -28,7 +28,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="   Lampung, Desa Sukajaya, Kecamatan Padang Cermin, Kabupaten Pesawaran."
+        android:text="   Kecamatan Punduh Pidada, Kabupaten Pesawaran, Lampung."
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textSize="16dp" />
 
@@ -40,7 +40,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="20dp"
-            android:text="@string/text3"
+            android:text="@string/text4"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             android:textSize="20dp" />
 
