--- a/program/app/src/main/res/layout/fragment_menu2.xml
+++ b/program/app/src/main/res/layout/fragment_menu2.xml
@@ -1,49 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#BFDAEF"
-    android:orientation="vertical"
-    tools:context=".MainActivity">
+    android:layout_height="wrap_content"
+    app:cardCornerRadius="20dp"
+    android:layout_marginHorizontal="10dp"
+    android:layout_marginVertical="10dp"
+    app:cardElevation="8dp">
 
-    <!-- TODO: Update blank fragment layout -->
-    <ImageView
-        android:layout_width="415dp"
-        android:layout_height="300dp"
-        android:src="@drawable/mutun" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:background="#093B51"
-        android:padding="20dp"
-        android:text="Pantai Mutun"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:textColor="#FFFFFF"
-        android:textSize="30dp" />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="   Lampung, Desa Sukajaya, Kecamatan Padang Cermin, Kabupaten Pesawaran."
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:textSize="16dp" />
-
-    <ScrollView
-        android:layout_width="wrap_content"
-        android:layout_height="338dp">
+        <ImageView
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:id="@+id/image"
+            android:layout_marginStart="20dp"
+            android:padding="8dp"
+            android:adjustViewBounds="true"
+            android:scaleType="fitXY"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:src="@drawable/hantu" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="20dp"
-            android:text="@string/text3"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-            android:textSize="20dp" />
+            android:id="@+id/title"
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            android:text="Pantai Lampung 1"
+            android:layout_marginStart="20dp"
+            app:layout_constraintStart_toEndOf="@id/image"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" />
 
-    </ScrollView>
-
-</LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.cardview.widget.CardView>
