--- a/program/app/src/main/res/layout/fragment_detail_activity.xml
+++ b/program/app/src/main/res/layout/fragment_detail_activity.xml
@@ -54,9 +54,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Maps"
+        android:drawableLeft="@drawable/baseline_location_on_24"
+        android:drawablePadding="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/detailDesc" />
+        app:layout_constraintTop_toBottomOf="@id/detailDesc" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
