--- a/program/app/src/main/res/layout/fragment_menu1.xml
+++ b/program/app/src/main/res/layout/fragment_menu1.xml
@@ -70,6 +70,7 @@
                 app:cardCornerRadius="20dp">
 
                 <RelativeLayout
+                    android:id="@+id/tambahwisata"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
@@ -88,7 +89,7 @@
                         android:layout_width="70dp"
                         android:layout_height="70dp"
                         android:id="@+id/clothingImage"
-                        android:src="@drawable/tipala"
+                        android:src="@drawable/baseline_add_24"
                         android:layout_marginTop="15dp"
                         android:layout_centerHorizontal="true"/>
 
@@ -104,6 +105,7 @@
                 app:cardCornerRadius="20dp">
 
                 <RelativeLayout
+                    android:id="@+id/wisatasaya"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
@@ -121,7 +123,7 @@
                     <ImageView
                         android:layout_width="70dp"
                         android:layout_height="70dp"
-                        android:src="@drawable/tipala"
+                        android:src="@drawable/baseline_beach_access_24"
                         android:id="@+id/elecImage"
                         android:layout_marginTop="15dp"
                         android:layout_centerHorizontal="true"/>
@@ -151,27 +153,28 @@
                 app:cardCornerRadius="20dp">
 
                 <RelativeLayout
+                    android:id="@+id/tentang"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
                     <TextView
+                        android:id="@+id/homeName"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/homeName"
-                        android:text="Tentang"
-                        android:textSize="20sp"
-                        android:textColor="@color/black"
-                        android:layout_marginTop="10dp"
+                        android:layout_below="@+id/homeImage"
                         android:layout_centerHorizontal="true"
-                        android:layout_below="@+id/homeImage"/>
+                        android:layout_marginTop="10dp"
+                        android:text="Tentang"
+                        android:textColor="@color/black"
+                        android:textSize="20sp" />
 
                     <ImageView
+                        android:id="@+id/homeImage"
                         android:layout_width="70dp"
                         android:layout_height="70dp"
-                        android:id="@+id/homeImage"
-                        android:src="@drawable/tipala"
+                        android:layout_centerHorizontal="true"
                         android:layout_marginTop="15dp"
-                        android:layout_centerHorizontal="true"/>
+                        android:src="@drawable/baseline_account_box_24" />
 
                 </RelativeLayout>
             </androidx.cardview.widget.CardView>
@@ -185,6 +188,7 @@
                 app:cardCornerRadius="20dp">
 
                 <RelativeLayout
+                    android:id="@+id/gallery"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
@@ -203,7 +207,7 @@
                         android:layout_width="70dp"
                         android:layout_height="70dp"
                         android:id="@+id/beautyImage"
-                        android:src="@drawable/tipala"
+                        android:src="@drawable/baseline_photo_library_24"
                         android:layout_marginTop="15dp"
                         android:layout_centerHorizontal="true"/>
 
